--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "NeteaseCloudMusicApi",
+  "name": "UniappMusicApi",
   "version": "3.22.0",
-  "description": "网易云音乐 NodeJS 版 API",
+  "description": "Uniapp Music NodeJS 版 API",
   "scripts": {
     "start": "node app.js",
     "test": "mocha -r intelli-espower-loader -t 20000 app.test.js --exit",
     "lint-fix": "eslint --fix --ext .js app.js module/ util/ test/ "
   },
   "keywords": [
-    "网易云音乐",
-    "网易云",
+    "Uniapp Music",
     "音乐",
-    "网易云音乐nodejs"
+    "Uniapp Music nodejs"
   ],
   "husky": {
     "hooks": {
